Fix nav spacing

--- a/assets/sass/mkdocs_extra.scss
+++ b/assets/sass/mkdocs_extra.scss
@@ -50,9 +50,13 @@ nav h1 a {
 nav h1 span {
 	display: inline-block;
     position: relative;
-    top: -2px;
+    top: 6px;
     font-family: "Operator SSm A", "Operator SSm B";
     font-size: 20px;
+}
+
+nav ul {
+    margin: 20px 0 0 0;
 }
 
 nav ul li a {
